# infobank_multi_agent_platform

./: .gitignore  README.md  a2a_types.py  pyproject.toml
agents/agentTemplate/: __main__.py  agent.py  agent_config.json  pyproject.toml  task_manager.py
agents/travel/airbnb-agent/: __main__.py  agent.py  agent_config.json  task_manager.py
agents/travel/itinerary-agent/: __main__.py  agent.py  agent_config.json  pyproject.toml  task_manager.py
agents/travel/map-search-agent/: __main__.py  agent.py  agent_config.json  task_manager.py
app/: main.py  task_queue.py
app/static/: chat.css  index.html
app/static/js/: agent_modal.js  main.js  messages.js  sidebar.js  websocket.js
client/: __init__.py  card_resolver.py  client.py
server/: server.py  task_manager.py
server/host_agent/: __main__.py  adk_host_manager.py  agent_config.json  application_manager.py  host_agent.py  pyproject.toml  remote_agent_connection.py  utils.py
